# colmenar

./: .gitignore  Cargo.toml  Makefile  README.md
src/: api.rs  array.rs  constants.rs  enumeration.rs  error.rs  generate.rs  generator.rs  init.rs  lib.rs  main.rs  model.rs  operation.rs  parameter.rs  prelude.rs  property.rs  resource.rs  workload.rs
src/scaffold/: mod.rs
tests/: 0_generate_cycle.rs  1_cycle.rs  test_cycle.rs
tests/fixtures/: cycle.yaml
