[package]
name = "colmenar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
genco = "0.17.5"
heck = "0.4.1"
hyper = { version = "0.14.26", features = ["http1", "http2", "client"] }
hyper-tls = "0.5.0"
indexmap = "1.9.3"
once_cell = "1.17.1"
openapiv3 = { git = "https://github.com/naturalethic/openapiv3.git", branch = "reference-description-summary", version = "1.0.2" }
serde = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1.28.0", features = ["macros"] }
